@startuml

title SistemaPropulsionBarco - Patron Strategy

note "getNombre(){\nreturn this.nombre;}" as N1
note "getSistemaPropulsion(){\nreturn this.sistemaPropulsion.getNombre();}\n\nviajar(int tiempo){\nint combustibleUtilizado = this.sistemaPropulsion.viajar(tiempo);\nthis.combustibleActual -= combustibleUtilizado; }" as N2
N1.. Vela
Barco ..N2

note "actualizarCombustibleUtilizado(){\ncombustibleUsado = this.combustibleInicial - this.barco.getCombustibleActual\nthis.combustibleTotalUtilizado += combustibleUsado} \n\ngetCombustibleActual(){\nreturn this.combustibleTotalUtilizado;\n\ngetHorasTotales(){\nutiliozacion del modulo GPS integrado en el barco???}}" as N3

note top of Barco : -El barco y el viaje dependen unos de otros para poder funcionar correctamente?\ncuando instancio un barco debo instanciar un viaje no?
note top of ModuloContable : -El viaje contiene un modulo contable?\n o el viaje usa un modulo contable?\nel modulo contable usa un viaje? 

class Barco{
    - viaje : Viaje
    - sistemaPropulsion : SistemaPropulsion
    - combustibleActual : 100
    + setSistemaPropulsion(sistemaPropulsion)
    + viajar(tiempo : int)
    + getCombustibleActual() : float 
    + getSistemaPropulsion() : String
}

Viaje o-- ModuloGPS

interface SistemaPropulsion{

    + activar(tiempo : int) : combustibleGastado
    + getNombre() : String
}

SistemaPropulsion o-- Barco
class Vela implements SistemaPropulsion{

    - nombre : "Vela"
}
class Motor implements SistemaPropulsion{
    - nombre :  "Motor"
}

class Viaje{
    - sedeIncial: String
    - sedeFinal: String
    - horasTotales : int 
    + Viaje(Barco)
    + getHorasTotales() : int
}

Barco o-- Viaje
class ModuloContable{
    - gananciaPorContainer = 50%;(ejemplo)
    + ModuloContable(conteiners, )
    + getGanancia() : float
}

'ModuloContable --> Viaje
note as N5
 modificar pasaje de km recorridos(distancia)
end note

note left of Barco::marchar
  el metodo marchar lo que debe hacer es:
    Inicia el viaje 
    donde activa el sistema de propulsion 
    y va calculando el combustible consumido
    
end note 
@enduml